--- a/en/index.html
+++ b/en/index.html
@@ -71,7 +71,7 @@
 							<p>...</p>
 						</div>
 						<div class="card-footer">
-							<a href="LicenseFiles/PrivacyPolice.txt">Read</a>
+							<a href="hypetownstd.github.io/LicenseFiles/PrivacyPolice">Read</a>
 						</div>
 					</article>
 					<article class="card">
