--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <main class="main">
   <section class="slider" id="tab-storm">
     <h1>The Ocean Shore</h1>
-    <h2><br>The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... <br>Take part in these battles and show dangerous types of robots who is better here!</br></h2>
+    <h2><br>The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... 
+      <br>Take part in these battles and show dangerous types of robots who is better here!</br>
+      <br><a href="https://bit.ly/3yBhXvo">Download Now!</a></br>
+    </h2>
   </section>
   <section class="slider" id="tab-nsy">
     <h1>Never Say Yes</h1>
@@ -34,7 +37,9 @@
   </section>
   <section class="slider" id="tab-amnesia">
     <h1>Escape from The Lab</h1>
-    <h2>An exciting puzzle game with a huge number of riddles and a very beautiful game design is already available in early access!</h2>
+    <h2>An exciting puzzle game with a huge number of riddles and a very beautiful game design is already available in early access!
+      <br><a href="https://bit.ly/3yBhXvo">Download Now!</a></br>
+    </h2>
   </section>
 </main>
 <canvas class="background"></canvas><!-- SGVsbG8hIE15IG5hbWUgaXMgU2FyYSBNYXphbC4gV2VsY29tZSB0byBteSBDb2RlUGVuIQ== -->
