--- a/chat/chat.html
+++ b/chat/chat.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <py-script>
+        pip install pywebio
+
         import asyncio
 
         from pywebio import start_server
