--- a/chat/chat.html
+++ b/chat/chat.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    <script pip install pywebio></script>
     <title>Chat - HypeTownStudio</title>
 </head>
 <body>
