--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <sectio class="nav">
   <h1>HypeTownStudio</h1>
   <h3 class="span loader"><span class="m">Escape</span><span class="m">from</span><span class="m">The</span><span class="m">Lab</span><span class="m">Out</span><span class="m">Now</span><span class="m">In</span><span class="m">Early</span><span class="m">Access</span></h3>
-  <div class="nav-container"><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-amnesia">Escape from The Lab</a></div>
+  <div class="nav-container"><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-amnesia">Escape from The Lab</a><a class="nav-tab" href="#tab-licenses">Licenses</a><a class="nav-tab" href="#tab-social">Social</a></div>
 </sectio>
 <main class="main">
   <section class="slider" id="tab-storm">
@@ -39,6 +39,18 @@
     <h1>Escape from The Lab</h1>
     <h2>An exciting puzzle game with a huge number of riddles and a very beautiful game design is already available in early access!
       <br><a href="https://bit.ly/3yBhXvo">Download Now!</a></br>
+    </h2>
+  </section>
+  <section class="slider" id="tab-social">
+    <h1>Social Networks</h1>
+    <h2>
+      <p><a href="https://vk.com/hypetownofficial">VK</a> | <a href="https://t.me/hypetownofficial">Telegram</a> | <a href="https://www.youtube.com/@hypetownstudio">YouTube</a> | <a href="https://discord.com/invite/aryfFnXJaQ">Discord</a></p>
+    </h2>
+  </section>
+  <section class="slider" id="tab-licenses">
+    <h1>Licenses</h1>
+    <h2>
+      <p><a href="LicenseFiles/EULA.txt">EULA</a> | <a href="LicenseFiles/PrivacyPolice.txt">Privacy Police</a> | <a href="LicenseFiles/ToS.txt">Terms of Use</a></p>
     </h2>
   </section>
 </main>
