--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <sectio class="nav">
   <h1>HypeTownStudio</h1>
   <h3 class="span loader"><span class="m">Escape</span><span class="m">from</span><span class="m">The</span><span class="m">Lab</span><span class="m">Out</span><span class="m">Now</span><span class="m">In</span><span class="m">Early</span><span class="m">Access</span></h3>
-  <div class="nav-container"><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-amnesia">Escape from The Lab</a><a class="nav-tab" href="#tab-licenses">Licenses</a><a class="nav-tab" href="#tab-social">Social</a></div>
+  <div class="nav-container"><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-amnesia">Escape from The Lab</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a></div>
 </sectio>
 <main class="main">
   <section class="slider" id="tab-storm">
