--- a/index.html
+++ b/index.html
@@ -13,17 +13,23 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="src/style/style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <sectio class="nav">
   <h1>HypeTownStudio</h1>
-  <h3 class="span loader"><span class="m">Escape</span><span class="m">from</span><span class="m">The</span><span class="m">Lab</span><span class="m">Out</span><span class="m">Now</span><span class="m">In</span><span class="m">Early</span><span class="m">Access</span></h3>
-  <div class="nav-container"><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-amnesia">Escape from The Lab</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a></div>
+  <h3 class="span loader"><span class="m">Announ</span><span class="m">cement</span><span class="m">com</span><span class="m">ing</span><span class="m">so</span><span class="m">on</span></h3>
+  <div class="nav-container"><a class="nav-tab" href="#tab-dream">???</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a></div>
 </sectio>
 <main class="main">
+  <section class="slider" id="tab-dream">
+    <h1>???</h1>
+    <h2>What has recently left has a chance to return...
+      <br><a href="https://bit.ly/3yBhXvo">HypeTownLauncher</a></br>
+    </h2>
+  </section>
   <section class="slider" id="tab-storm">
     <h1>The Ocean Shore</h1>
     <h2><br>The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... 
@@ -35,12 +41,12 @@
     <h1>Never Say Yes</h1>
     <h2>In Development</h2>
   </section>
-  <section class="slider" id="tab-amnesia">
+  <!-- <section class="slider" id="tab-amnesia">
     <h1>Escape from The Lab</h1>
     <h2>An exciting puzzle game with a huge number of riddles and a very beautiful game design is already available in early access!
       <br><a href="https://bit.ly/3yBhXvo">Download Now!</a></br>
     </h2>
-  </section>
+  </section> -->
   <section class="slider" id="tab-social">
     <h1>Social Networks</h1>
     <h2>
@@ -50,14 +56,14 @@
   <section class="slider" id="tab-licenses">
     <h1>Licenses</h1>
     <h2>
-      <p><a href="LicenseFiles/EULA.txt">EULA</a> | <a href="LicenseFiles/PrivacyPolice.txt">Privacy Police</a> | <a href="LicenseFiles/ToS.txt">Terms of Use</a></p>
+      <p><a href="LicenseFiles/txt/EULA.txt">EULA</a> | <a href="LicenseFiles/txt/PrivacyPolice.txt">Privacy Police</a> | <!--<a href="LicenseFiles/txt/TermsOfUse.txt">--><a href="./failed.html">Terms of Use</a></p>
     </h2>
   </section>
 </main>
 <canvas class="background"></canvas><!-- SGVsbG8hIE15IG5hbWUgaXMgU2FyYSBNYXphbC4gV2VsY29tZSB0byBteSBDb2RlUGVuIQ== -->
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
-  <script src="script.js"></script>
+  <script src="src/script/script.js"></script>
 
 </body>
 </html>
