--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="slider" id="tab-dream">
     <h1>???</h1>
     <h2>What has recently left has a chance to return...
-      <br><a href="https://bit.ly/3yBhXvo">HypeTownLauncher</a></br>
+      <br><a href="#tab-social">Watch and wait</a></br>
     </h2>
   </section>
   <section class="slider" id="tab-storm">
