--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </section>
   <section class="slider" id="tab-nsy">
     <h1>Never Say Yes</h1>
-    <h2>In Development</h2>
+    <h2>More information will be available later!</h2>
   </section>
   <!-- <section class="slider" id="tab-amnesia">
     <h1>Escape from The Lab</h1>
