--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Home - HypeTownStudio</title>
+  <title>Home - Reverse Entertainment</title>
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--  SGVsbG8hIE15IG5hbWUgaXMgU2FyYSBNYXphbC4gV2VsY29tZSB0byBteSBDb2RlUGVuIQ== -->
@@ -19,13 +19,13 @@
 <body>
 <!-- partial:index.partial.html -->
 <sectio class="nav">
-  <h1>HypeTownStudio</h1>
+  <h1>Reverse Entertainment</h1>
   <h3 class="span loader"><span class="m">Announ</span><span class="m">cement</span><span class="m">com</span><span class="m">ing</span><span class="m">so</span><span class="m">on</span></h3>
-  <div class="nav-container"><a class="nav-tab" href="#tab-dream">???</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a></div>
+  <div class="nav-container"><a class="nav-tab" href="#tab-dream">Oblivion of Dream</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a></div>
 </sectio>
 <main class="main">
   <section class="slider" id="tab-dream">
-    <h1>???</h1>
+    <h1>Oblivion of Dream</h1>
     <h2>What has recently left has a chance to return...
       <br><a href="#tab-social">Watch and wait</a></br>
     </h2>
@@ -50,7 +50,7 @@
   <section class="slider" id="tab-social">
     <h1>Social Networks</h1>
     <h2>
-      <p><a href="https://vk.com/hypetownofficial">VK</a> | <a href="https://t.me/hypetownofficial">Telegram</a> | <a href="https://www.youtube.com/@hypetownstudio">YouTube</a> | <a href="https://discord.com/invite/aryfFnXJaQ">Discord</a></p>
+      <p><a href="https://vk.com/reverseentofficial">VK</a> | <a href="https://t.me/reverseofficial">Telegram</a> | <a href="https://www.youtube.com/@reversegamestudio">YouTube</a> | <a href="https://discord.com/invite/aryfFnXJaQ">Discord</a></p>
     </h2>
   </section>
   <section class="slider" id="tab-licenses">
