Added launcher tab

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <!-- partial:index.partial.html -->
 <sectio class="nav">
   <h1>Reverse Entertainment</h1>
-  <h3 class="span loader"><span class="m">Announ</span><span class="m">cement</span><span class="m">com</span><span class="m">ing</span><span class="m">so</span><span class="m">on</span></h3>
-  <div class="nav-container"><a class="nav-tab" href="#tab-dream">Oblivion of Dream</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a></div>
+  <!-- <h3 class="span loader"><span class="m">Announ</span><span class="m">cement</span><span class="m">com</span><span class="m">ing</span><span class="m">so</span><span class="m">on</span></h3> -->
+  <div class="nav-container"><a class="nav-tab" href="#tab-dream">Oblivion of Dream</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-launcher">Launcher</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a></div>
 </sectio>
 <main class="main">
   <section class="slider" id="tab-dream">
@@ -47,6 +47,12 @@
       <br><a href="https://bit.ly/3yBhXvo">Download Now!</a></br>
     </h2>
   </section> -->
+  <section class="slider" id="tab-launcher">
+    <h1>HypeTownLauncher</h1>
+    <h2>Our Launcher where you can download all our games as well as mods from our friend OKOKA.
+      <br><a href="https://installer.launcher.xsolla.com/xlauncher-builds/xsolla-launcher-update/4051/bin/web_installer.exe">Download</a></br>
+    </h2>
+  </section>
   <section class="slider" id="tab-social">
     <h1>Social Networks</h1>
     <h2>
