--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <section class="slider" id="tab-dream">
     <h1>Oblivion of Dream</h1>
     <h2>What has recently left has a chance to return...
-      <br><a href="#tab-social">Watch and wait</a></br>
+      <br><a class="Link" href="#tab-social">Watch and wait</a></br>
     </h2>
   </section>
   <section class="slider" id="tab-storm">
     <h1>The Ocean Shore</h1>
     <h2><br>The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... 
       <br>Take part in these battles and show dangerous types of robots who is better here!</br>
-      <br><h2><a href="https://bit.ly/3yBhXvo">HypeTownLauncher</a> | <a href="https://vkplay.ru/play/game/theoceanshore/">VK Play</a></h2></br>
+      <br><h2><a class="Link" href="https://bit.ly/3yBhXvo">HypeTownLauncher</a> | <a class="Link" href="https://vkplay.ru/play/game/theoceanshore/">VK Play</a></h2></br>
     </h2>
   </section>
   <section class="slider" id="tab-nsy">
@@ -50,19 +50,19 @@
   <section class="slider" id="tab-launcher">
     <h1>HypeTownLauncher</h1>
     <h2>Our Launcher where you can download all our games as well as mods from our friend OKOKA.
-      <br><a href="https://installer.launcher.xsolla.com/xlauncher-builds/xsolla-launcher-update/4051/bin/web_installer.exe">Download</a></br>
+      <br><a class="Link" href="https://installer.launcher.xsolla.com/xlauncher-builds/xsolla-launcher-update/4051/bin/web_installer.exe">Download</a></br>
     </h2>
   </section>
   <section class="slider" id="tab-social">
     <h1>Social Networks</h1>
     <h2>
-      <p><a href="https://vk.com/reverseentofficial">VK</a> | <a href="https://t.me/reverseofficial">Telegram</a> | <a href="https://www.youtube.com/@reversegamestudio">YouTube</a> | <a href="https://discord.com/invite/aryfFnXJaQ">Discord</a></p>
+      <p><a class="Link" href="https://vk.com/reverseentofficial">VK</a> | <a class="Link" href="https://t.me/reverseofficial">Telegram</a> | <a class="Link" href="https://www.youtube.com/@reversegamestudio">YouTube</a> | <a class="Link" href="https://discord.com/invite/aryfFnXJaQ">Discord</a></p>
     </h2>
   </section>
   <section class="slider" id="tab-licenses">
     <h1>Licenses</h1>
     <h2>
-      <p><a href="LicenseFiles/txt/EULA.txt">EULA</a> | <a href="LicenseFiles/txt/PrivacyPolice.txt">Privacy Police</a> | <!--<a href="LicenseFiles/txt/TermsOfUse.txt">--><a href="./failed.html">Terms of Use</a></p>
+      <p><a class="Link" href="LicenseFiles/txt/EULA.txt">EULA</a> | <a class="Link" href="LicenseFiles/txt/PrivacyPolice.txt">Privacy Police</a> | <!--<a href="LicenseFiles/txt/TermsOfUse.txt">--><a class="Link" href="./failed.html">Terms of Use</a></p>
     </h2>
   </section>
 </main>
