--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 <sectio class="nav">
   <h1>Reverse Entertainment</h1>
   <!-- <h3 class="span loader"><span class="m">Announ</span><span class="m">cement</span><span class="m">com</span><span class="m">ing</span><span class="m">so</span><span class="m">on</span></h3> -->
-  <div class="nav-container"><a class="nav-tab" href="#tab-dream">Oblivion of Dream</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-launcher">Launcher</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a><a class="nav-tab" href="#tab-newsite">New site</a></div>
+  <div class="nav-container"><a class="nav-tab" href="#tab-dream">Oblivion of Dream</a><a class="nav-tab" href="#tab-storm">The Ocean Shore</a><a class="nav-tab" href="#tab-nsy">Never Say Yes</a><a class="nav-tab" href="#tab-launcher">Launcher</a><a class="nav-tab" href="#tab-social">Social</a><a class="nav-tab" href="#tab-licenses">Licenses</a><!--<a class="nav-tab" href="#tab-newsite">New site</a>--></div>
 </sectio>
 <main class="main">
-  <section class="slider" id="tab-newsite">
+  <!--<section class="slider" id="tab-newsite">
     <h1>Our new website!</h1>
     <h2>
-      <br><a class="Link" href="./NewVersion/index-new.html">Try it!</a></br>
+      <br><a class="Link" href="./new/index-new.html">Try it!</a></br>
     </h2>
-  </section>
+  </section>-->
   <section class="slider" id="tab-dream">
     <h1>Oblivion of Dream</h1>
     <h2>What has recently left has a chance to return...
