--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <section class="slider" id="tab-dream">
     <h1>Oblivion of Dream</h1>
     <h2>What has recently left has a chance to return...
-      <br><a class="Link" href="#tab-social">Watch and wait</a></br>
+      <br><a class="Link" href="#tab-social">Watch and wait</a>
     </h2>
   </section>
   <section class="slider" id="tab-storm">
     <h1>The Ocean Shore</h1>
     <h2><br>The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... 
-      <br>Take part in these battles and show dangerous types of robots who is better here!</br>
+      <br>Take part in these battles and show dangerous types of robots who is better here!
       <br><h2><a class="Link" href="https://bit.ly/3yBhXvo">HypeTownLauncher</a> | <a class="Link" href="https://vkplay.ru/play/game/theoceanshore/">VK Play</a></h2></br>
     </h2>
   </section>
@@ -74,7 +74,7 @@
 </main>
 <canvas class="background"></canvas><!-- SGVsbG8hIE15IG5hbWUgaXMgU2FyYSBNYXphbC4gV2VsY29tZSB0byBteSBDb2RlUGVuIQ== -->
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="src/script/script.js"></script>
 
 </body>
