--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -10,7 +10,7 @@
 <body>
     <div class="root">
         <div class="nav-bar">
-            <img src="src/style/img/TheOceanShore_NewLogo_WS_Horizontal.png" alt="Strom_Logo" width="500" height="100px">
+            <img class="re_logo" src="src/style/img/TheOceanShore_NewLogo_WS_Horizontal.png" alt="Strom_Logo">
         </div>
         <div class="product-info-block" id="about">
             <img class="screenshot" src="src/style/img/TheOceanShore_LauncherBackground.png" alt="">
@@ -22,9 +22,18 @@
             </p>
         </div>
         <div class="product-info-block" id="multiplayer">
-            <img class="screenshot" src="src/style/img/HighresScreenshot00015.png" alt="">
+            <img class="screenshot" src="src/style/img/TheOceanShore_LauncherBackground.png" alt="">
             <h1 class="product-info-block-h">
                 MULTIPLAYER
+            </h1>
+            <p class="product-info-block-desc">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque assumenda doloremque delectus eligendi saepe optio sapiente? Quam commodi temporibus, cupiditate quasi sequi ea inventore veritatis, molestiae aspernatur facilis illo cum!
+            </p>
+        </div>
+        <div class="product-info-block" id="beta-test">
+            <img class="screenshot" src="src/style/img/TheOceanShore_LauncherBackground.png" alt="">
+            <h1 class="product-info-block-h">
+                BETA TEST
             </h1>
             <p class="product-info-block-desc">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque assumenda doloremque delectus eligendi saepe optio sapiente? Quam commodi temporibus, cupiditate quasi sequi ea inventore veritatis, molestiae aspernatur facilis illo cum!
