Added reverseGram page

--- a/new/index-new.html
+++ b/new/index-new.html
@@ -27,6 +27,17 @@
                     </h1>
                 </div>
                 <!-- empty div end -->
+                <!-- rG div -->
+                <div class="product-card" id="product_RG">
+                    <h1 class="product-header_RL">
+                        reverseGram
+                    </h1>
+                    <p class="product-text">
+                        Unofficial Telegram client based on Android sources with new features.
+                    </p>
+                    <a class="product-link" href="products/reversegram.html">View</a>
+                </div>
+                <!-- RL div end -->
                 <!-- RL div -->
                 <div class="product-card" id="product_RL">
                     <h1 class="product-header_RL">
