--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reverseGram</title>
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    reverseGram
+    <div class="nav-bar">
+        <h1 class="rg_header_nb">
+            reverseGram
+        </h1>
+    </div>
+    <div class="rg_desc">
+        <img class="rg_img" src="src/img/reverseGram_Update.png" alt="RG_U_9_5_2" width="500px" height="500px">
+        <h1 class="rg_header">
+            about
+        </h1>
+        <p class="rg_p">
+            Unofficial Telegram client based on Android sources with new features.<br>
+            - {feature}<br>
+            - {feature}<br>
+            - {feature}<br>
+            - {feature}<br>
+            - {feature}<br>
+            - {feature}<br>
+        </p>
+        <div class="rg_nav">
+            <a class="rg_button" href="https://t.me/reverseGram">
+                Telegram channel
+            </a>
+            |
+            <a class="rg_button" href="https://t.me/reverseGramUpdates">
+                Updates channel
+            </a>
+        </div>
+    </div>
 </body>
 </html>
