Update reverseGram page

--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reverseGram</title>
     <link rel="stylesheet" href="src/style.css">
+    <link rel="shortcut icon" href="src/img/reverseGram_WebSite_L.png" type="image/x-icon">
 </head>
 <body>
     <div class="nav-bar">
@@ -34,6 +35,10 @@
             |
             <a class="rg_button" href="https://t.me/reverseGramUpdates">
                 Updates channel
+            </a>
+            |
+            <a class="rg_button" href="https://t.me/+TDgUKI8I2cs1ODgy">
+                Official Chat
             </a>
         </div>
     </div>
