Updated reverseGram page & style

--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -10,10 +10,10 @@
 <body>
     <div class="root">
         <div class="nav-bar">
-            <img class="re_logo" src="src/style/img/TheOceanShore_NewLogo_WS_Horizontal.png" alt="Strom_Logo">
+            <img class="re_logo" src="src/img/TheOceanShore_NewLogo_WS_Horizontal.png" alt="Strom_Logo">
         </div>
         <div class="product-info-block" id="about">
-            <img class="screenshot" src="src/style/img/TheOceanShore_LauncherBackground.png" alt="">
+            <img class="screenshot" src="src/img/TheOceanShore_LauncherBackground.png" alt="about_bg">
             <h1 class="product-info-block-h">
                 ABOUT
             </h1>
@@ -22,7 +22,7 @@
             </p>
         </div>
         <div class="product-info-block" id="multiplayer">
-            <img class="screenshot" src="src/style/img/TheOceanShore_LauncherBackground.png" alt="">
+            <img class="screenshot" src="src/img/TheOceanShore_LauncherBackground.png" alt="multiplayer_bg">
             <h1 class="product-info-block-h">
                 MULTIPLAYER
             </h1>
@@ -31,7 +31,7 @@
             </p>
         </div>
         <div class="product-info-block" id="beta-test">
-            <img class="screenshot" src="src/style/img/TheOceanShore_LauncherBackground.png" alt="">
+            <img class="screenshot" src="src/img/TheOceanShore_LauncherBackground.png" alt="beta-test_bg">
             <h1 class="product-info-block-h">
                 BETA TEST
             </h1>
