--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -29,18 +29,44 @@
             - {feature}<br>
         </p>
         <div class="rg_nav">
-            <a class="rg_button" href="https://t.me/reverseGram">
-                Telegram channel
-            </a>
-            |
-            <a class="rg_button" href="https://t.me/reverseGramUpdates">
-                Updates channel
-            </a>
-            |
-            <a class="rg_button" href="https://t.me/+TDgUKI8I2cs1ODgy">
-                Official Chat
-            </a>
+            
         </div>
     </div>
 </body>
+<footer>
+    <div class="rg_footer">
+        <div class="rg_footer_block" id="01_social">
+            <h1 class="rg_footer_h">
+                social
+            </h1>
+            <div class="rg_nav-footer">
+                <a class="rg_button" href="https://t.me/reverseGram">
+                    Telegram channel
+                </a>
+                <a class="rg_button" href="https://t.me/reverseGramUpdates">
+                    Updates channel
+                </a>
+                <a class="rg_button" href="https://t.me/+TDgUKI8I2cs1ODgy">
+                    Official Chat
+                </a>
+            </div>
+        </div>
+        <div class="rg_footer_block" id="02_pages">
+            <h1 class="rg_footer_h">
+                pages
+            </h1>
+            <div class="rg_nav-footer">
+                <a class="rg_button" href="../index-new.html">
+                    home
+                </a>
+                <a class="rg_button" href="../news.html">
+                    news
+                </a>
+                <a class="rg_button" href="../../index.html">
+                    old site
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
