Added news page

--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -15,7 +15,7 @@
         </h1>
     </div>
     <div class="rg_desc">
-        <img class="rg_img" src="src/img/reverseGram_Update.png" alt="RG_U_9_5_2" width="500px" height="500px">
+        <img class="rg_img" src="src/img/reverseGram_Update.png" alt="RG_U_9_5_2">
         <h1 class="rg_header">
             about
         </h1>
@@ -28,9 +28,6 @@
             - {feature}<br>
             - {feature}<br>
         </p>
-        <div class="rg_nav">
-            
-        </div>
     </div>
 </body>
 <footer>
@@ -51,12 +48,28 @@
                 </a>
             </div>
         </div>
-        <div class="rg_footer_block" id="02_pages">
+        <div class="rg_footer_block" id="02_social-re">
+            <h1 class="rg_footer_h">
+                reverse social 
+            </h1>
+            <div class="rg_nav-footer">
+                <a class="footer-link-tw" href="../home.html">
+                    twitter
+                </a>
+                <a class="footer-link-vk" href="../news.html">
+                    vk
+                </a>
+                <a class="footer-link-yt" href="../../index.html">
+                    youtube
+                </a>
+            </div>
+        </div>
+        <div class="rg_footer_block" id="03_pages">
             <h1 class="rg_footer_h">
                 pages
             </h1>
             <div class="rg_nav-footer">
-                <a class="rg_button" href="../index-new.html">
+                <a class="rg_button" href="../home.html">
                     home
                 </a>
                 <a class="rg_button" href="../news.html">
