--- a/new/news.html
+++ b/new/news.html
@@ -5,8 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>news</title>
+    <link rel="stylesheet" href="src/style/style-new.css">
+    <link rel="stylesheet" href="src/style/style-news.css">
 </head>
 <body>
-    
+    <div class="nav-bar">
+        <img class="RE_Logo" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="RE_Logo" width="64px" height="64px">
+        <h1>
+            <a href="home.html">home</a>
+            <a href="news.html">news</a>
+            <a href="../index.html">old site</a>
+        </h1>
+    </div>
+    <div class="news-f">
+            <div class="news-h-f">
+                <div class="news-card-f" id="news_empty">
+                    <h1 class="news-header">
+                        "Header"
+                    </h1>
+                    <p class="news-text">
+                        "Text"
+                    </p>
+                </div>
+                <div class="news-card-f" id="news_01">
+                    <h1 class="news-header">
+                        "Header"
+                    </h1>
+                    <p class="news-text">
+                        "Text"
+                    </p>
+                </div>
+                <div class="news-card-f" id="news_02">
+                    <h1 class="news-header">
+                        "Header"
+                    </h1>
+                    <p class="news-text">
+                        "Text"
+                    </p>
+                </div>
+                <div class="news-card-f" id="news_03">
+                    <h1 class="news-header">
+                        "Header"
+                    </h1>
+                    <p class="news-text">
+                        "Text"
+                    </p>
+                </div>
+            </div>
+        </div>
 </body>
+<footer>
+    <div class="re-footer">
+        <div class="social">
+            <h1 class="footer-h">
+                social
+            </h1>
+            <h2>
+                <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
+                    twitter
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
+                    youtube
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
+                    vk
+                </a>
+            </h2>
+        </div>
+        <div class="other">
+            <h1 class="footer-h">
+                pages
+            </h1>
+            <h2>
+                <a class="footer-link" href="#">
+                    home
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link" href="#">
+                    news
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link" href="#">
+                    old site
+                </a>
+            </h2>
+        </div>
+    </div>
+</footer>
 </html>
