--- a/new/home.html
+++ b/new/home.html
@@ -13,7 +13,7 @@
         <img class="RE_Logo" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="RE_Logo" width="64px" height="64px">
         <h1>
             <a href="home.html">home</a>
-            <a href="news.html">news</a>
+            <a href="notifications/fail.html">news</a>
             <a href="../index.html">old site</a>
         </h1>
     </div>
