--- a/new/news.html
+++ b/new/news.html
@@ -19,25 +19,19 @@
     </div>
     <div class="news-f">
             <div class="news-h-f">
-                <div class="news-card-f" id="news_empty">
-                    <h1 class="news-header">
-                        "Header"
-                    </h1>
-                    <p class="news-text">
-                        "Text"
-                    </p>
-                </div>
                 <div class="news-card-f" id="news_01">
                     <h1 class="news-header">
-                        "Header"
+                        Happy Victory Day!
                     </h1>
                     <p class="news-text">
-                        "Text"
+                        We wish you and your family all the best🦔
+                        Also wanted to let you know that the update for The Ocean Shore is almost ready and testing will start soon!
+                        Before that, we released a small patch to the current version of the game to fix some issues.
                     </p>
                 </div>
                 <div class="news-card-f" id="news_02">
                     <h1 class="news-header">
-                        "Header"
+                        Update 0.5.0 soon
                     </h1>
                     <p class="news-text">
                         "Text"
@@ -45,11 +39,21 @@
                 </div>
                 <div class="news-card-f" id="news_03">
                     <h1 class="news-header">
-                        "Header"
+                        Bye, HypeTownStudio!
                     </h1>
                     <p class="news-text">
                         "Text"
                     </p>
+                    <a class="product-link" href="news/news_03.html">View full news</a>
+                </div>
+                <div class="news-card-f" id="news_04">
+                    <h1 class="news-header">
+                        Slight problem with the Launcher
+                    </h1>
+                    <p class="news-text">
+                        "Text"
+                    </p>
+                    <a class="product-link" href="products/reversegram.html">View full news</a>
                 </div>
             </div>
         </div>
