Updated reverseGram page

--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -15,7 +15,7 @@
         </h1>
     </div>
     <div class="rg_desc">
-        <img class="rg_img" src="src/img/reverseGram_Update.png" alt="RG_U_9_5_2">
+        <img class="rg_img" src="src/img/reverseGram_Update.png" alt="RG_U_9_5_2" width="350px" height="350px">
         <h1 class="rg_header">
             about
         </h1>
@@ -38,10 +38,10 @@
             </h1>
             <div class="rg_nav-footer">
                 <a class="rg_button" href="https://t.me/reverseGram">
-                    Telegram channel
+                    Telegram
                 </a>
                 <a class="rg_button" href="https://t.me/reverseGramUpdates">
-                    Updates channel
+                    Updates
                 </a>
                 <a class="rg_button" href="https://t.me/+TDgUKI8I2cs1ODgy">
                     Official Chat
@@ -50,7 +50,7 @@
         </div>
         <div class="rg_footer_block" id="02_social-re">
             <h1 class="rg_footer_h">
-                reverse social 
+                social 
             </h1>
             <div class="rg_nav-footer">
                 <a class="footer-link-tw" href="../home.html">
