--- a/new/home.html
+++ b/new/home.html
@@ -13,7 +13,7 @@
         <img class="RE_Logo" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="RE_Logo" width="64px" height="64px">
         <h1>
             <a href="home.html">home</a>
-            <a href="notifications/fail.html">news</a>
+            <a href="notifications/development.html">news</a>
             <a href="../index.html">old site</a>
         </h1>
     </div>
@@ -182,7 +182,7 @@
                 </a>
             </h2>
             <h2>
-                <a class="footer-link" href="notifications/develoment.html">
+                <a class="footer-link" href="notifications/development.html">
                     news
                 </a>
             </h2>
