--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -72,7 +72,7 @@
                 <a class="rg_button" href="../home.html">
                     home
                 </a>
-                <a class="rg_button" href="../news.html">
+                <a class="rg_button" href="../notifications/development.html">
                     news
                 </a>
                 <a class="rg_button" href="../../index.html">
