Updated cards on The Ocean Shore page & Fixed reverseGram page

--- a/new/products/reversegram.html
+++ b/new/products/reversegram.html
@@ -21,12 +21,12 @@
         </h1>
         <p class="rg_p">
             Unofficial Telegram client based on Android sources with new features.<br>
+       <!-- - {feature}<br>
             - {feature}<br>
             - {feature}<br>
             - {feature}<br>
             - {feature}<br>
-            - {feature}<br>
-            - {feature}<br>
+            - {feature}<br> -->
         </p>
     </div>
 </body>
