--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -18,7 +18,7 @@
                 ABOUT
             </h1>
             <p class="product-info-block-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque assumenda doloremque delectus eligendi saepe optio sapiente? Quam commodi temporibus, cupiditate quasi sequi ea inventore veritatis, molestiae aspernatur facilis illo cum!
+                The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... Take part in these battles and show dangerous types of robots who is better here!
             </p>
         </div>
         <div class="product-info-block" id="multiplayer">
@@ -27,7 +27,7 @@
                 MULTIPLAYER
             </h1>
             <p class="product-info-block-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque assumenda doloremque delectus eligendi saepe optio sapiente? Quam commodi temporibus, cupiditate quasi sequi ea inventore veritatis, molestiae aspernatur facilis illo cum!
+                Fun and interesting gameplay!A huge variety of game modes and the same number of maps. Call your friends and start destroying your opponents!
             </p>
         </div>
         <div class="product-info-block" id="beta-test">
@@ -36,24 +36,26 @@
                 BETA TEST
             </h1>
             <p class="product-info-block-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque assumenda doloremque delectus eligendi saepe optio sapiente? Quam commodi temporibus, cupiditate quasi sequi ea inventore veritatis, molestiae aspernatur facilis illo cum!
+                To participate in the beta test of the game, contact the developers from Reverse.
             </p>
         </div>
         <div class="news-feed" id="news-feed">
             <div class="news-entry" id="news_00">
                 <h1 class="news-header">
-                    Test
+                    Happy Victory Day!
                 </h1>
                 <p class="news-text">
-                    Test
+                    We wish you and your family all the best🦔<br>
+                    Also wanted to let you know that the update for The Ocean Shore is almost ready and testing will start soon!
+                    Before that, we released a small patch to the current version of the game to fix some issues.
                 </p>
             </div>
             <div class="news-entry" id="news_01">
                 <h1 class="news-header">
-                    Test
+                    Update 0.5.0 is coming soon
                 </h1>
                 <p class="news-text">
-                    Test
+                    As for the Ocean Shore update. They haven't forgotten about it. I think that in about a month it will be ready, and you will be able to try this long-awaited update!
                 </p>
             </div>
         </div>
