Updated "About" card on The Ocean Shore page

--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -15,7 +15,7 @@
         <div class="product-info-block" id="about">
             <img class="screenshot" src="src/img/TheOceanShore_LauncherBackground.png" alt="about_bg">
             <h1 class="product-info-block-h">
-                ABOUT
+                ABOUT GAME
             </h1>
             <p class="product-info-block-desc">
                 The robot war began on The Ocean Shore... It lasted a very long time. During this time, the entire human race has disappeared, and only robots remain on Earth, who are fighting for the last resources to prolong the life of their species... Take part in these battles and show dangerous types of robots who is better here!
