Cosmetic & Adaptive update

--- a/new/home.html
+++ b/new/home.html
@@ -5,18 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
+    <!-- styles -->
     <link rel="stylesheet" href="src/style/style-new.css">
-    <link rel="stylesheet" href="src/style/product_headers.css">
+    <link rel="stylesheet" href="src/style/tools/product_headers.css">
+    <link rel="stylesheet" href="src/style/tools/footer.css">
+    <link rel="stylesheet" href="src/style/tools/header.css">
+    <link rel="stylesheet" href="src/style/tools/scrollbar.css">
+    <!-- styles -->
 </head>
 <body>
-    <div class="nav-bar">
-        <img class="RE_Logo" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="RE_Logo" width="64px" height="64px">
-        <h1>
-            <a href="home.html">home</a>
-            <a href="notifications/development.html">news</a>
-            <a href="../index.html">old site</a>
-        </h1>
-    </div>
+    <header>
+        <ul class="nav-bar-b">
+            <img src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li>
+               <a class="nav-btn" href="home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="news.html">news</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../index.html">old site</a>
+            </li>
+        </ul>
+    </header>
     <div class="product-news-block">
         <div class="product-info">
             <div class="product-info-h">
@@ -116,10 +127,7 @@
                         Oblivion of Dream is returning
                     </h1>
                     <p class="news-text">
-                        Last year we were developing our first game, and after a huge number of problems, the development of this project was postponed for a certain period of time, after which we took up this project again!
-                        We're talking about Oblivion of Dream, of course!
-                        In December 2022 we started the development of Oblivion of Dream almost from scratch. During this year we will be releasing a small demo of the game.
-                    </p>
+                    </p>    
                 </div>
                 <div class="news-card" id="news_03">
                     <h1 class="news-header">
