--- a/new/game/the-ocean-storm.html
+++ b/new/game/the-ocean-storm.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Ocean Shore</title>
     <link rel="stylesheet" href="src/style/the-ocean-shore.css">
+    <link rel="stylesheet" href="../src/style/tools/footer.css">
+    <link rel="stylesheet" href="../src/style/tools/header.css">
+    <link rel="stylesheet" href="../src/style/tools/scrollbar.css">
 </head>
 <body>
+    <header>
+        <ul class="nav-bar-b">
+            <img class="logo_re" src="src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li>
+               <a class="nav-btn" href="../home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../news.html">news</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../index.html">old site</a>
+            </li>
+        </ul>
+    </header>
     <div class="root">
-        <div class="nav-bar">
-            <img class="re_logo" src="src/img/TheOceanShore_NewLogo_WS_Horizontal.png" alt="Strom_Logo">
-        </div>
         <div class="product-info-block" id="about">
             <img class="screenshot" src="src/img/TheOceanShore_LauncherBackground.png" alt="about_bg">
             <h1 class="product-info-block-h">
@@ -61,4 +75,48 @@
         </div>
     </div>
 </body>
+<footer>
+    <div class="re-footer">
+        <div class="social">
+            <h1 class="footer-h">
+                social
+            </h1>
+            <h2>
+                <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
+                    twitter
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
+                    youtube
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
+                    vk
+                </a>
+            </h2>
+        </div>
+        <div class="other">
+            <h1 class="footer-h">
+                pages
+            </h1>
+            <h2>
+                <a class="footer-link" href="#">
+                    home
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link" href="#">
+                    news
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link" href="#">
+                    old site
+                </a>
+            </h2>
+        </div>
+    </div>
+</footer>
 </html>
