--- a/new/notifications/development.html
+++ b/new/notifications/development.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oops...</title>
     <link rel="stylesheet" href="../src/style/style-new.css">
+    <link rel="stylesheet" href="../src/style/tools/footer.css">
+    <link rel="stylesheet" href="../src/style/tools/header.css">
+    <link rel="stylesheet" href="../src/style/tools/scrollbar.css">
 </head>
 <body>
+    <header>
+        <ul class="nav-bar-b">
+            <img class="logo_re" src="../src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
+            <li>
+                <a class="nav-btn" href="home.html">home</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="news.html">news</a>
+            </li>
+            <li>
+                <a class="nav-btn" href="../index.html">old site</a>
+            </li>
+        </ul>
+    </header>
     <div class="dev">
         <h1>
             Oops...
@@ -19,4 +36,48 @@
         <a class="product-link" href="../home.html">Go back</a>
     </div>
 </body>
+<footer>
+    <div class="re-footer">
+        <div class="social">
+            <h1 class="footer-h">
+                social
+            </h1>
+            <h2>
+                <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
+                    twitter
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
+                    youtube
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
+                    vk
+                </a>
+            </h2>
+        </div>
+        <div class="other">
+            <h1 class="footer-h">
+                pages
+            </h1>
+            <h2>
+                <a class="footer-link" href="#">
+                    home
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link" href="#">
+                    news
+                </a>
+            </h2>
+            <h2>
+                <a class="footer-link" href="#">
+                    old site
+                </a>
+            </h2>
+        </div>
+    </div>
+</footer>
 </html>
